# soft-eng-challenge

./: .gitignore  README.md  manage.py  pyproject.toml
.confidential/: default.json
.github/workflows/: main.yaml
airforce/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  documentation.py  models.py  serializers.py  services.py  swagger.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20220508_1704.py
api/utils/: exception_handlers.py
templates/: index.html
